--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
     <meta name="theme-color" content="#ffffff">
     <title>LazyAcres Vineyard & Winery</title>
     <meta name="description" content="Hobby vineyard & winery in Browns Valley CA">
-    <!-- Import Styles -->   
+    <!-- Import Styles -->
     <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/line-icons.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/elegant-icons.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        type="text/css" media="all">
     <link href="css/theme-1.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/custom.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="./assets/styles.css" media="all">
     <!-- Import Vue.js -->
     <script src="https://unpkg.com/vue@next"></script>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700'
         rel='stylesheet' type='text/css'>
-    <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Cardo:400,400italic" rel="stylesheet" type="text/css">
     <link href="css/font-cardo.css" rel="stylesheet" type="text/css">
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+
+    <!--
+    <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>    
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.plugin.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.plugin.min.js"></script>  
     <script src="js/jquery.flexslider-min.js"></script>
     <script src="js/smooth-scroll.min.js"></script>
     <script src="js/skrollr.min.js"></script>
@@ -42,46 +44,31 @@
     <script src="js/twitterFetcher_v10_min.js"></script>
     <script src="js/lightbox.min.js"></script>
     <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/scripts.js"></script>
-
+    -->
 </head>
 
 <body>
     <div id="app">
-        <div class="loader">
-            <div class="spinner">
-                <div class="double-bounce1"></div>
-                <div class="double-bounce2"></div>
+        <div>
+            <div class="topbar">
+                <div class="mylogo">
+                    <a href="index.html"><img alt="Logo" src="assets/buckle.jpg"></a>
+                </div>
+                <div class="navbar">
+                    <div class="navitem" v-on:click="content='home'" :class="{ 'text-red': content=='home' }">Home</div>
+                    <div class="navitem" v-on:click="content='about'" :class="{ 'text-red': content=='about' }">About
+                    </div>
+                    <div class="navitem" v-on:click="content='process'" :class="{ 'text-red': content=='process' }">
+                        Process</div>
+                    <div class="navitem" v-on:click="content='wines'" :class="{ 'text-red': content=='wines' }">Our
+                        Wines</div>
+                    <div class="navitem" v-on:click="content='contact'" :class="{ 'text-red': content=='contact' }">
+                        Contact</div>
+                </div>
             </div>
         </div>
-        <div class="nav-container">
-            <nav class="centered-logo top-bar">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <a href="index.html">
-                                <img class="logo logo-dark" alt="Logo" src="img/buckle.jpg">
-                        </div>
-                        <div class="nav-menu">
-                            <div class="col-sm-12 columns text-center">
-                                <ul class="menu">
-                                    <a></a>
-                                    <li v-on:click="content='home'" :class="{ 'text-red': content=='home' }">Home</li>
-                                    <li v-on:click="content='about'" :class="{ 'text-red': content=='about' }">About</li>
-                                    <li v-on:click="content='process'" :class="{ 'text-red': content=='process' }">Process</li>
-                                    <li v-on:click="content='wines'" :class="{ 'text-red': content=='wines' }">Our Wines</li>
-                                    <li v-on:click="content='contact'" :class="{ 'text-red': content=='contact' }">Contact</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mobile-toggle">
-                        <i class="icon icon_menu"></i>
-                    </div>
-                </div>
-                <div class="bottom-border"></div>
-            </nav>
-        </div>
+        <div class="bottom-border"></div>
+        
         <div v-if="content=='home'">
             <home></home>
         </div>
